--- a/src/css/critical.scss
+++ b/src/css/critical.scss
@@ -1,7 +1,7 @@
 $mobileMin: 0px;
 $mobileMax: 991px;
 $desktopMin: 992px;
-@import "./font";
+@import "./fonts";
 @import './vars';
 @import "./reset";
 body {
